<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <ImageButton
            android:id="@+id/websiteImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            app:srcCompat="@drawable/web_icon"
            android:layout_alignTop="@+id/short_name"
            android:layout_toRightOf="@+id/short_name"
            android:layout_toEndOf="@+id/short_name"
            android:layout_marginTop="6dp" />

        <middletownmusic.org.midwestradio.utils.RadioTextView
            android:id="@+id/short_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:enabled="true"
            android:textSize="40sp"
            android:textColor="@color/black"
            tools:text="WCRD" />


    </RelativeLayout>

    <middletownmusic.org.midwestradio.utils.RadioTextView
        android:id="@+id/frequency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="94dp"
        android:text="@string/_104_1"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:layout_centerHorizontal="true" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/frequency"
        android:layout_above="@+id/top_row"
        android:visibility="visible">

        <RelativeLayout
            android:id="@+id/form_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <middletownmusic.org.midwestradio.utils.RadioTextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_centerHorizontal="true"
                android:layout_marginTop="37dp"
                android:gravity="center"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:paddingStart="40dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:text="Some Super long text description Some Super description" />

            <middletownmusic.org.midwestradio.utils.RadioTextView
                android:id="@+id/genre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/description"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:text="Genre: Reggaeton" />

            <middletownmusic.org.midwestradio.utils.RadioTextView
                android:id="@+id/type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/genre"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:text="Type: Commercial (IE national public radio)" />

        </RelativeLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/top_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout3"
        android:orientation="horizontal">

        <middletownmusic.org.midwestradio.utils.RadioButton
            android:id="@+id/playButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_border"
            android:textColor="@color/black"
            android:text="@string/play" />

        <middletownmusic.org.midwestradio.utils.RadioButton
            android:id="@+id/stopButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:background="@drawable/button_border"
            android:text="@string/stop" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:orientation="horizontal"
        android:id="@+id/linearLayout3">

        <middletownmusic.org.midwestradio.utils.RadioButton
            android:id="@+id/previous_scan"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_border"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:text="@string/scan_left" />

        <middletownmusic.org.midwestradio.utils.RadioButton
            android:id="@+id/previous"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_border"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:text="@string/less_than" />

        <middletownmusic.org.midwestradio.utils.RadioButton
            android:id="@+id/next"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:background="@drawable/button_border"
            android:textSize="20sp"
            android:text="@string/greater" />

        <middletownmusic.org.midwestradio.utils.RadioButton
            android:id="@+id/next_scan"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_border"
            android:textSize="20sp"
            android:text="@string/scan_right" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:orientation="horizontal"
        android:id="@+id/linearLayout2">

        <middletownmusic.org.midwestradio.utils.RadioButton
            android:id="@+id/button1"
            android:textColor="@color/black"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:background="@drawable/button_border"
            android:layout_weight="1"
            android:text="@string/_1" />

        <middletownmusic.org.midwestradio.utils.RadioButton
            android:id="@+id/button2"
            android:textColor="@color/black"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:background="@drawable/button_border"
            android:layout_weight="1"
            android:text="@string/_2" />

        <middletownmusic.org.midwestradio.utils.RadioButton
            android:id="@+id/button3"
            android:textColor="@color/black"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:background="@drawable/button_border"
            android:layout_weight="1"
            android:text="@string/_3" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout">

        <middletownmusic.org.midwestradio.utils.RadioButton
            android:id="@+id/button4"
            android:textColor="@color/black"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_border"
            android:text="@string/_4" />

        <middletownmusic.org.midwestradio.utils.RadioButton
            android:id="@+id/button5"
            android:textColor="@color/black"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:background="@drawable/button_border"
            android:layout_weight="1"
            android:text="@string/_5" />

        <middletownmusic.org.midwestradio.utils.RadioButton
            android:id="@+id/button6"
            android:textColor="@color/black"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:background="@drawable/button_border"
            android:layout_weight="1"
            android:text="@string/_6" />
    </LinearLayout>

    <middletownmusic.org.midwestradio.utils.RadioTextView
        android:id="@+id/location"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:visibility="gone">
    </middletownmusic.org.midwestradio.utils.RadioTextView>


</RelativeLayout>